--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@charset "utf-8";
+
 /* ########## 全体指定 ########## */
 * {
   margin: 0;
@@ -5,8 +7,11 @@
 }
 
 html {
-	font-family: "メイリオ",Meiryo,"ヒラギノ角ゴ Pro W3","Hiragino Kaku Gothic Pro","ＭＳ Ｐゴシック",
-	              "MS PGothic",Helvetica,Arial,sans-serif;
+  font-family: YuGothic, Meiryo, "Hiragino Kaku Gothic Pro", sans-serif;
+}
+
+body {
+  -webkit-text-size-adjust: 100%;
 }
 
 a {
@@ -32,16 +37,16 @@ a {
   z-index: 1;
 }
 
-nav p {
+nav h1 {
   float: left;
   font-size: 22px;
-  font-family: cursive;
+  font-family: cursive, Script, cursive;
   padding-left: 20px;
   padding-top: 8px;
   width: 100%;
 }
 
-nav p a {
+nav h1 a {
   color: rgba(255, 255, 255, 0.9); 
 }
 
@@ -49,7 +54,6 @@ nav ul {
   float: left;
   padding: 5px 0 0 15px;
   list-style: none;
-  font-family: Ludica Sans Unicode;
 }
 
 nav ul li {
@@ -74,10 +78,9 @@ nav li a:hover {
   height: 62px;
 }
   
-nav p {
+nav h1 {
   float: left;
   font-size: 29px;
-  font-family: cursive;
   padding-left: 20px;
   padding-top: 8px;
   width: 25%;
@@ -97,7 +100,6 @@ nav li a {
 }
 
 
-
 /* ########## トップ画面 ########## */
 
 .Top {
@@ -108,12 +110,11 @@ nav li a {
   background-repeat: no-repeat;
 }
 
-.Top p {
+.Top p#motto {
   padding-top: 25%;
   font-size: 40px;
   color: LightGray;
   text-align: center;
-  font-family: Terminal, SimSun;
 }
 
 
@@ -123,11 +124,9 @@ nav li a {
   height: 400px;
 }  
   
-.Top p {
+.Top p#motto {
   font-size: 25px;
 }
-
-
 }
 
 /* ### 1024 px以上 ### */
@@ -136,24 +135,21 @@ nav li a {
   height: 810px;
 }
 
-.Top p {
+.Top p#motto {
   font-size: 60px;
 }
 }
   
 
-
-
 /* ########## プロフィール画面 ########## */
 
-.Profile h1 {
+.Profile h2 {
   font-size: 45px;
   text-align: center;
   padding-top: 5px;
 }
 
-
-.Profile_left h2 {
+.Profile_left h3 {
   float: left;
   font-size: 25px;
   text-align: center;
@@ -177,12 +173,7 @@ nav li a {
   margin: 0 auto;
 }
 
-.Profile_left h4 {
-  font-size: 18px;
-}
-
-
-.Profile_right h2 {
+.Profile_right h3 {
   font-size: 25px;
   text-align: center;
 }
@@ -201,29 +192,25 @@ nav li a {
 
 /* ### 600 px以下 ### */
 @media (max-width: 600px) {
-
 .Profile {
   height: 910px;
 }
 
-.Profile h1 {
+.Profile h2 {
   font-size: 35px;
 }
 
-.Profile_left h2 {
+.Profile_left h3 {
   font-size: 20px;
 }
 
-.Profile_right h2 {
+.Profile_right h3 {
   font-size: 20px;
 }
-
-
 }
 
 /* ### 1024 px以上 ### */
 @media (min-width: 1024px) {
-
 .Profile {
   height: 710px;
 }
@@ -250,15 +237,11 @@ nav li a {
   margin-right: auto;
 }  
 
-
 .Profile_right img {
   text-align: center;
   width: 80%;
   margin: 0 auto;
 }
-
-  
-
 }
 
 
@@ -272,7 +255,7 @@ nav li a {
   background-repeat: no-repeat;
 }
 
-.Works h1 {
+.Works h2 {
   font-size: 45px;
   text-align: center;
   padding-top: 20px;
@@ -281,7 +264,6 @@ nav li a {
 
 .Work1 {
   background: repeating-linear-gradient(45deg, rgba(68, 68, 68, 0.7), #444 15px, #888 0, #888 35px);
-　opacity: 0.8;
   position: absolute;
   height: 33vw;
   width: 33vw;
@@ -291,7 +273,7 @@ nav li a {
   left: 10%;
 }
 
-.Work1 p {
+.Work1 h3 {
   color: white;
   text-align: center;
   padding-top: 35%;
@@ -309,7 +291,7 @@ nav li a {
   left: 60%;
 }
 
-.Work2 p {
+.Work2 h3 {
   color: white;
   text-align: center;
   padding-top: 35%;
@@ -328,7 +310,7 @@ nav li a {
   left: 10%;
 }
 
-.Work1 p {
+.Work1 h3 {
   font-size: 15px;
 }
 
@@ -338,7 +320,7 @@ nav li a {
   left: 60%;
 }
 
-.Work2 p {
+.Work2 h3 {
   font-size: 15px;
 }
 }
@@ -354,7 +336,7 @@ nav li a {
   left: 10%;
 }
 
-.Work1 p {
+.Work1 h3 {
   font-size: 35px;
   padding-top: 40%;
 }
@@ -365,13 +347,11 @@ nav li a {
   left: 60%;
 }
 
-.Work2 p {
+.Work2 h3 {
   font-size: 35px;
   padding-top: 40%;
 }
-
 }
-
 
 
 /* ########## Blog画面 ########## */
@@ -380,7 +360,7 @@ nav li a {
   height: 600px;
 }
 
-.Blog h1 {
+.Blog h2 {
   font-size: 45px;
   text-align: center;
   padding-top: 20px;
@@ -409,11 +389,11 @@ nav li a {
   width: 50%;
 }
 
-.Blog_right h2 {
+.Blog_right h3 {
   font-size: 18px;
 }
 
-.Blog_right p {
+.Blog_right p#blog_intro {
   font-size: 14px;
   width: 85%;
   padding-top: 10px;
@@ -430,7 +410,6 @@ nav li a {
 .Blog {
   height: 710px;
 }
-
 }
 
 /* ### 1024 px以上 ### */
@@ -439,12 +418,12 @@ nav li a {
   height: 700px;
 }
   
-.Blog_right h2 {
+.Blog_right h3 {
   font-size: 25px;
   padding-top: 20px;
 }
 
-.Blog_right p {
+.Blog_right p#blog_intro {
   font-size: 20px;
   width: 85%;
   padding-top: 10px;
@@ -454,7 +433,6 @@ nav li a {
   font-size: 18px;
   line-height: 48px;
 }
-  
 }
 
 
@@ -469,14 +447,14 @@ nav li a {
   background-repeat: no-repeat;
 }
 
-.Vision h1 {
+.Vision h2 {
   font-size: 30px;
   text-align: center;
   padding-top: 5px;
   padding-bottom: 5px;
 }
 
-.Vision h2 {
+.Vision h3 {
   font-size: 20px;
   text-align: center;
 }
@@ -494,14 +472,14 @@ nav li a {
 }
 
 
-.Vision1 h3 {
+.Vision1 h4 {
   font-size: 18px;
   text-align: center;
   padding-top: 5px;
   padding-bottom: 5px;
 }
 
-.Vision1 p {
+.Vision1 h5 {
   font-size: 15px;
   padding-left: 10px;
   padding-right: 10px;
@@ -519,14 +497,14 @@ nav li a {
   left: 55%;
 }
 
-.Vision2 h3 {
+.Vision2 h4 {
   font-size: 18px;
   text-align: center;
   padding-top: 5px;
   padding-bottom: 5px;
 }
 
-.Vision2 p {
+.Vision2 h5 {
   font-size: 15px;
   padding-left: 13px;
   padding-right: 13px;
@@ -536,14 +514,14 @@ nav li a {
 
 /* ### 600 px以下 ### */
 @media (max-width: 600px) {
-.Vision h1 {
+.Vision h2 {
   font-size: 12px;
   text-align: center;
   padding-top: 5px;
   padding-bottom: 5px;
 }
 
-.Vision h2 {
+.Vision h3 {
   font-size: 10px;
   text-align: center;
 }
@@ -560,15 +538,14 @@ nav li a {
   left: 5%;
 }
 
-
-.Vision1 h3 {
+.Vision1 h4 {
   font-size: 8px;
   text-align: center;
   padding-top: 5px;
   padding-bottom: 5px;
 }
 
-.Vision1 p {
+.Vision1 h5 {
   font-size: 8px;
   padding-left: 10px;
   padding-right: 10px;
@@ -586,20 +563,19 @@ nav li a {
   left: 55%;
 }
 
-.Vision2 h3 {
+.Vision2 h4 {
   font-size: 8px;
   text-align: center;
   padding-top: 5px;
   padding-bottom: 5px;
 }
 
-.Vision2 p {
+.Vision2 h5 {
   font-size: 8px;
   padding-left: 13px;
   padding-right: 13px;
   line-height: 1.7;  
 }
-  
 }
 
 /* ### 1024 px以上 ### */
@@ -608,14 +584,14 @@ nav li a {
   height: 700px;
 }
   
-.Vision h1 {
+.Vision h2 {
   font-size: 45px;
   text-align: center;
   padding-top: 20px;
   padding-bottom: 10px;
 }
 
-.Vision h2 {
+.Vision h3 {
   font-size: 33px;
   text-align: center;
 }
@@ -633,14 +609,14 @@ nav li a {
 }
 
 
-.Vision1 h3 {
+.Vision1 h4 {
   font-size: 24px;
   text-align: center;
   padding-top: 10px;
   padding-bottom: 10px;
 }
 
-.Vision1 p {
+.Vision1 h5 {
   font-size: 21px;
   padding-left: 10px;
   padding-right: 10px;
@@ -658,20 +634,17 @@ nav li a {
   left: 60%;
 }
 
-.Vision2 h3 {
+.Vision2 h4 {
   font-size: 24px;
   text-align: center;
   padding-top: 10px;
   padding-bottom: 10px;
 }
 
-.Vision2 p {
+.Vision2 h5 {
   font-size: 22px;
   padding-left: 13px;
   padding-right: 13px;
   line-height: 1.9;  
 }
-
-  
 }
-
