--- a/reset.css
+++ b/reset.css
@@ -23,7 +23,10 @@ time, mark, audio, video {
 
 body {
     line-height:1.6;
+    color: black;
 }
+
+
 
 article,aside,details,figcaption,figure,
 footer,header,hgroup,menu,nav,section { 
