--- a/style.css
+++ b/style.css
@@ -19,11 +19,6 @@ a {
 
 }
 
-.clearfix:after {
-  content:"";
-  clear: both;
-  display: block
-}
 
 /* ########## ヘッダー ########## */
 
@@ -47,7 +42,12 @@ nav h1 {
 }
 
 nav h1 a {
-  color: rgba(255, 255, 255, 0.9); 
+  color: rgba(255, 255, 255, 0.9);
+  
+}
+
+nav h1 a:hover {
+  text-decoration: none;
 }
 
 nav ul {
@@ -58,7 +58,7 @@ nav ul {
 
 nav ul li {
   display: inline-block;
-  margin: 0px 20px;
+  margin: 0px 25px;
 }
 
 nav li a {
@@ -72,8 +72,8 @@ nav li a:hover {
 }
 
 
-/* ### 1024 px以上 ### */
-@media (min-width: 1024px) {
+/* ### 992 px以上 ### */
+@media (min-width: 992px) {
 .header {
   height: 62px;
 }
@@ -82,16 +82,16 @@ nav h1 {
   float: left;
   font-size: 29px;
   padding-left: 20px;
-  padding-top: 8px;
+  padding-top: 12px;
   width: 25%;
 }
 
 nav ul {
-  padding: 30px 0 0 25px;
+  padding: 30px 0 0 30px;
 }
 
 nav ul li {
-  margin: 0px 30px;
+  margin: 0px 35px;
 }
 
 nav li a {
@@ -115,6 +115,7 @@ nav li a {
   font-size: 40px;
   color: LightGray;
   text-align: center;
+
 }
 
 
@@ -129,8 +130,8 @@ nav li a {
 }
 }
 
-/* ### 1024 px以上 ### */
-@media (min-width: 1024px) {
+/* ### 992 px以上 ### */
+@media (min-width: 992px) {
 .Top {
   height: 810px;
 }
@@ -153,7 +154,7 @@ nav li a {
   float: left;
   font-size: 25px;
   text-align: center;
-  padding-bottom: 5px;
+  padding-bottom: 10px;
   width: 100%;
 }
 
@@ -176,6 +177,8 @@ nav li a {
 .Profile_right h3 {
   font-size: 25px;
   text-align: center;
+  padding-top: 10px;
+  padding-bottom: 15px;
 }
 
 .Profile_right p {
@@ -185,7 +188,7 @@ nav li a {
 
 .Profile_right img {
   text-align: center;
-  width: 60%;
+  width: 70%;
   margin: 0 auto;
 }
 
@@ -209,18 +212,12 @@ nav li a {
 }
 }
 
-/* ### 1024 px以上 ### */
-@media (min-width: 1024px) {
+/* ### 992 px以上 ### */
+@media (min-width: 992px) {
 .Profile {
   height: 710px;
 }
 
-.Profile_left {
-  float: left;
-  width: 50%;
-  margin-left: auto;
-  margin-right: auto;
-}  
 
 .Profile_left img {
   width: 60%;
@@ -230,16 +227,10 @@ nav li a {
   width: 75%;
 }
   
-.Profile_right {
-  float: left;
-  width: 50%;
-  margin-left: auto;
-  margin-right: auto;
-}  
 
 .Profile_right img {
   text-align: center;
-  width: 80%;
+  width: 95%;
   margin: 0 auto;
 }
 }
@@ -248,7 +239,6 @@ nav li a {
 /*########## Works画面 ########## */
 
 .Works {
-  position: relative;
   height: 600px;
   background-image: url("works.jpg");  
   background-size: 100% auto; 
@@ -258,117 +248,97 @@ nav li a {
 .Works h2 {
   font-size: 45px;
   text-align: center;
-  padding-top: 20px;
-  padding-bottom: 5px;
+  padding-top: 15px;
+  padding-bottom: 10px;  
 }
 
-.Work1 {
-  background-color: rgba(255, 255, 255, 0.9);
-  position: absolute;
-  height: 31vw;
-  width: 31vw;
-  margin-left: auto;
-  margin-right: auto;
-  top: 150px;
-  left: 10%;
+.thumbnail {
+  margin-left: 60px;
+  margin-right: 60px;
 }
 
-
-.Work1 h3 {
-  color: black;
+.caption h3 {
+  font-size: 20px;
   text-align: center;
-  font-size: 18px;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
-.Work1 p img {
-  width: 100%;
-}
-
-.Work2 {
-  background: repeating-linear-gradient(45deg, rgba(68, 68, 68, 0.7), #444 15px, #888 0, #888 35px);
-  position: absolute;
-  height: 31vw;
-  width: 31vw;
-  margin-left: auto;
-  margin-right: auto;
-  top: 150px;
-  left: 60%;
-}
-
-.Work2 h3 {
-  color: white;
+.caption p {
+  font-size: 16px;
   text-align: center;
-  padding-top: 35%;
-  font-size: 25px;
-} 
-
+  padding-bottom: 10px;
+}
 
 /* ### 600 px以下 ### */
 @media (max-width: 600px) {
 .Works {
-  height: 350px;
+  height: 500px;
 }  
-  
-.Work1 {
-  top: 90px;
-  left: 10%;
+
+.Works h2 {
+  font-size: 45px;
+  text-align: center;
+  padding-top: 15px;
+  padding-bottom: 10px;  
 }
 
-.Work1 h3 {
-  font-size: 14px;
+.thumbnail {
+  margin-left: 10px;
+  margin-right: 10px;
 }
 
-.Work1 p img {
-  width: 100%;
+.caption h3 {
+  font-size: 12px;
+  text-align: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
 }
 
-.Work2 {
-  top: 90px;
-  left: 60%;
+.caption p {
+  font-size: 8px;
+  text-align: center;
+  padding-bottom: 10px;
 }
 
-.Work2 h3 {
-  font-size: 15px;
-}
 }
 
-/* ### 1024 px以上 ### */
-@media (min-width: 1024px) {
+/* ### 992 px以上 ### */
+@media (min-width: 992px) {
 .Works {
   height: 700px;
 }  
-  
-.Work1 {
-  top: 150px;
-  left: 10%;
+
+.Works h2 {
+  font-size: 45px;
+  text-align: center;
+  padding-top: 20px;
+  padding-bottom: 30px;  
 }
 
-.Work1 p img {
-  width: 100%;
+.thumbnail {
+  margin-left: 70px;
+  margin-right: 70px;
 }
 
-.Work1 h3 {
+.caption h3 {
   font-size: 25px;
+  text-align: center;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.caption p {
+  font-size: 18px;
+  text-align: center;
+  padding-bottom: 13px;
 }
 
 
-.Work2 {
-  top: 150px;
-  left: 60%;
-}
-
-.Work2 h3 {
-  font-size: 35px;
-  padding-top: 40%;
-}
 }
 
 
 /* ########## Blog画面 ########## */
-
-.Blog {
-  height: 600px;
-}
 
 .Blog h2 {
   font-size: 45px;
@@ -377,57 +347,58 @@ nav li a {
   padding-bottom: 5px;  
 }
 
-.Blog_left {
-  float: left;
-  width: 50%;
-}
 
 .Blog_left p {
   text-align: center;
   margin: 0 auto;
-  padding-top: 20px;
+  padding-top: 40px;
 
 }
 
 .Blog_left p img {
-  width: 80%;
+  width: 60%;
   margin: 0 auto;
-}
-
-.Blog_right {
-  float: left;
-  width: 50%;
+  padding-bottom: 20px;
 }
 
 .Blog_right h3 {
-  font-size: 18px;
+  font-size: 20px;
+  padding-top: 20px;
+  padding-left: 30px;
 }
 
 .Blog_right p#blog_intro {
-  font-size: 14px;
+  font-size: 18px;
   width: 85%;
   padding-top: 10px;
+  padding-left: 30px;
 }
 
 .Blog_right li {
-  font-size: 14px;
-  line-height: 30px;
+  font-size: 16px;
+  line-height: 35px;
+  padding-left: 30px;
 }
 
 
 /* ### 600 px以下 ### */
 @media (max-width: 600px) {
 .Blog {
-  height: 710px;
+  height: 910px;
 }
 }
 
-/* ### 1024 px以上 ### */
-@media (min-width: 1024px) {
+/* ### 992 px以上 ### */
+@media (min-width: 992px) {
 .Blog {
-  height: 700px;
+  height: 710px;
 }
   
+.Blog_left p img {
+  width: 90%;
+  margin: 0 auto;
+}
+
 .Blog_right h3 {
   font-size: 25px;
   padding-top: 20px;
@@ -440,7 +411,7 @@ nav li a {
 }
 
 .Blog_right li {
-  font-size: 18px;
+  font-size: 17px;
   line-height: 48px;
 }
 }
@@ -588,8 +559,8 @@ nav li a {
 }
 }
 
-/* ### 1024 px以上 ### */
-@media (min-width: 1024px) {
+/* ### 992 px以上 ### */
+@media (min-width: 992px) {
 .Vision {
   height: 700px;
 }
